<resources>
    <string name="app_name">On Demand Home Repair</string>
    <string name="name_section">Name</string>
    <string name="credentials_section">Credentials</string>
    <string name="first_name_editText_hint">First</string>
    <string name="email_editText_hint">Email</string>
    <string name="signup_textview">Sign Up</string>
    <string name="last_name_editText_hint">Last</string>
    <string name="username_editText_hint">Username</string>
    <string name="password_editText_hint">Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="app_name_textview">App Name</string>
    <string name="password_edittext">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="address_editText_hint">Address</string>
    <string name="phoneNumber_editText_hint">Phone Number</string>
    <string name="title_activity_type">TypeActivity</string>
    <string name="type_admin">admin</string>
    <string name="type_homeowner">home owner</string>
    <string name="type_serviceprovider">service provider</string>
    <string name="type">Type of User</string>
    <string name="welcome_textview">Sign In</string>
    <string name="or_textview">or</string>
    <string name="home">Home</string>
    <string name="Profile">Profile</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="services">Services</string>
    <string name="service_name">Service</string>
    <string name="service_type">Service Type</string>
    <string name="service_rate">Service Rate</string>
    <string name="add_button">Add</string>
    <string name="company_name_editText">Company Name</string>
    <string name="description_editText">General Description</string>
    <string name="isLicensed">Licensed</string>
    <string name="cancel_dialog">Cancel</string>
    <string-array name="services_array">
        <item>Appliance Installation</item>
        <item>Carpet Cleaning</item>
        <item>Moving</item>
        <item>Plumbing</item>
        <item>Appliance Repair</item>
        <item>Furniture Assembly</item>
        <item>Locksmith</item>
        <item>Painting</item>
        <item>Window Cleaning</item>
        <item>Electrical</item>
        <item>Mould Remediation</item>
        <item>Pest Control</item>
        <item>Junk Removal</item>
        <item>Handyman Services</item>
    </string-array>
</resources>
