<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPageActivity">

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="56dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/name_section"
        android:textSize="20sp"
        app:layout_constrainedWidth="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="44dp"
        android:layout_toLeftOf="@id/name_textview"
        android:background="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="44dp"
        android:layout_toRightOf="@id/name_textview"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/first_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="fill_vertical|center"
        android:gravity="center"
        android:hint="@string/first_name_editText_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textview" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/last_name_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:foregroundGravity="fill_vertical|center"
        android:gravity="center"
        android:hint="@string/last_name_editText_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_edittext" />

    <TextView
        android:id="@+id/credential_textview"
        android:layout_width="114dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/credentials_section"
        android:textSize="20sp"
        app:layout_constrainedWidth="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_edittext" />

    <View
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="204dp"
        android:layout_toLeftOf="@id/credential_textview"
        android:background="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="204dp"
        android:layout_toRightOf="@id/credential_textview"
        android:background="#000000"
        app:layout_constraintStart_toEndOf="@+id/credential_textview"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>